--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import './components/header_Components/Header.scss';
 @import './components/NavBar.scss';
+@import './components/footer_Components/Footer.scss';
 
 * {
   margin: 0;
@@ -10,6 +11,18 @@
 .body {
   display: block;
   place-items: start;
+}
+.logo {
+  font-size: 1rem;
+  margin-top: 2em;
+  font-family: $ubuntuFont;
+  font-weight: bold;
+
+  &_container {
+      text-align: left;
+      margin: 0.5em 0.5em;
+
+  }
 }
 
 
