--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import './components/header_Components/Header.scss';
 @import './components/NavBar.scss';
+@import './components/pictures_components/Pictures_Section.scss';
 @import './components/footer_Components/Footer.scss';
 
 * {
