--- a/src/App.scss
+++ b/src/App.scss
@@ -26,4 +26,17 @@
   }
 }
 
+@media only screen and (min-width: 1000px) {
+  .logo {
+    font-size: 1.7rem;
+    margin-top: 2em;
+    margin-left: 1em;
+  
+    &_container {
+        margin-bottom: $marginBottom * 2.5;
+  
+    }
+  }
+}
+
 
