--- a/src/components/header_Components/Header.scss
+++ b/src/components/header_Components/Header.scss
@@ -4,7 +4,7 @@
 
 .header {
     background: url('../../assets/headerBackground.png') no-repeat center;
-    background-size: 100% 100%; 
+    background-size: cover; 
     width: 90%;
     min-height: 10em;
     margin: 0.5em auto;
@@ -29,45 +29,92 @@
         margin-bottom: $marginBottom;
 
         &__form {
-            width: 90%;
             margin: 0 auto;
-            position: relative;
 
+            &_components {
+                width: 90%;
+                display: inline-flex;
+                justify-content: center;
+                align-items: center;
+            }
             &_btn {
                 width: 3em;
                 height: 1.5em;
                 background-color: $whiteColor;
                 border-top-left-radius: 0.5em;
                 border-bottom-left-radius: 0.5em;
-                position: absolute;
-                left: 0.5em;
                 border: none;
+                cursor: pointer;
 
                 &-icon {
                     width: 50%;
                 }
             }
+            &_btn:active {
+                transform: scale(0.9);
+                box-shadow: 2px 0px $whiteColor;
+            }
             &_input {
-                width: 17em;
+                width: 12em;
                 height: 2.5em;
                 border: none;
                 font-size: 0.5em;
-                position: absolute;
-                left: 5.8em;
                 text-align: center;
             }
             &_select {
-                width: 7.4em;
+                width: 10em;
                 height: 1.5em;
-                position: absolute;
-                right: 0.5em;
                 border: none;
                 border-top-right-radius: 0.5em;
                 border-bottom-right-radius: 0.5em;
+                font-family: $nunitoFont;
             }
 
         }
     }
     
     
+}
+
+@media only screen and (min-width: 1000px) {
+    .header {
+        background: url('../../assets/headerBackground.png') no-repeat center;
+        background-size: cover;
+        min-height: 20em;
+
+        &__title {
+            font-size: 2.5rem;
+            margin-bottom: 0.5em;
+    
+            &_subtitle {
+            font-size: 1rem;
+            margin-bottom: $marginBottom * 4;
+            }
+        }
+        
+    }
+    .searchBar {
+
+        &__form {
+
+            &_components {
+                height: 5em;
+
+                .searchBar__form_btn {
+                    width: 3.5em;
+                    height: 2.5em;
+                }
+                .searchBar__form_input {
+                    width: 15em;
+                    height: 2.095em;
+                    font-size: 1em;
+                }
+                .searchBar__form_select {
+                    width: 12em;
+                    height: 2.5em;
+                    text-align: center;
+                }
+            }
+        }
+    }
 }
