--- a/src/components/footer_Components/Footer.scss
+++ b/src/components/footer_Components/Footer.scss
@@ -32,3 +32,25 @@
         }
     }
 }
+
+@media only screen and (min-width: 1000px) {
+    .footer {
+      
+        &__descrip {
+            font-size: 1.5rem;
+        }
+        .social {
+            top: 2.2em;
+
+            &__list {
+                width: 80%;
+                justify-content: space-around;
+            }
+            &__icon{
+                width: 2em;
+                height: 2em;
+                margin: 0;
+            }
+        }        
+    }
+}
